# cavaco_hero

./: .gitignore  README.md  pyproject.toml
presets/: chords.yaml  settings.yaml
src/cavacohero/: app.py
src/cavacohero/engine/: scheduler.py  state.py
src/cavacohero/instrument/: cavaco.py
src/cavacohero/render/: __init__.py  common.py  fretboard.py  fretboard_full.py  piano.py
src/cavacohero/theory/: chords.py  library.py  select.py  tabs.py
src/cavacohero/ui/: cli.py  tk_app.py
tests/: test_full.py  test_library.py
